--- a/views/option-group.html
+++ b/views/option-group.html
@@ -121,6 +121,9 @@
               <input type="text" placeholder="Escribe tu nombre" class="form-control" id="first-person">
             </div>
             <h3 class="col-xs-12">¿Que Género prefieres?</h3>
+            <!-- botón ok -->
+            <button class="btn-ok"> Ok </button>
+            <!--  -->
             <div class="icons-gender">
               <div class="genders col-xs-3 accion">
                 <img class="" src="../assets/icons/icons-03.png" alt="accion">
@@ -236,27 +239,27 @@
             </div>
             <h3 class="col-xs-12">¿Que Género prefieres?</h3>
             <div class="icons-gender">
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 accion">
                 <img src="../assets/icons/icons-03.png" alt="accion">
                 <p>Acción</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 animado">
                 <img src="../assets/icons/icons-01.png" alt="animado">
                 <p>Animado</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 aventura">
                 <img src="../assets/icons/icons-09.png" alt="aventura">
                 <p>Aventura</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 cienciaficcion">
                 <img src="../assets/icons/icons-06.png" alt="Ciencia ficción">
                 <p>C. Ficción</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 comedia">
                 <img src="../assets/icons/icons-11.png" alt="Comedia">
                 <p>Comedia</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 drama">
                 <img src="../assets/icons/icons-10.png" alt="Drama">
                 <p>Drama</p>
               </div>
@@ -293,51 +296,51 @@
             </div>
             <h3 class="col-xs-12">¿Que Género prefieres?</h3>
             <div class="icons-gender">
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 accion">
                 <img src="../assets/icons/icons-03.png" alt="accion">
                 <p>Acción</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 animado">
                 <img src="../assets/icons/icons-01.png" alt="animado">
                 <p>Animado</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 aventura">
                 <img src="../assets/icons/icons-09.png" alt="aventura">
                 <p>Aventura</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 cienciaficcion">
                 <img src="../assets/icons/icons-06.png" alt="Ciencia ficción">
                 <p>C. Ficción</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 comedia">
                 <img src="../assets/icons/icons-11.png" alt="Comedia">
                 <p>Comedia</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 drama">
                 <img src="../assets/icons/icons-10.png" alt="Drama">
                 <p>Drama</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 erotico">
                 <img src="../assets/icons/icons-12.png" alt="Erotico">
                 <p>Erótico</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 fantasia">
                 <img src="../assets/icons/icons-02.png" alt="Fantasía">
                 <p>Fantasía</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 musical">
                 <img src="../assets/icons/icons-07.png" alt="Musical">
                 <p>Musical</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 romantica">
                 <img src="../assets/icons/icons-08.png" alt="Romantica">
                 <p>Romantica</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 suspenso">
                 <img src="../assets/icons/icons-05.png" alt="Suspenso">
                 <p>Suspenso</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 terror">
                 <img src="../assets/icons/icons-04.png" alt="Terror">
                 <p>Terror</p>
               </div>
@@ -350,60 +353,68 @@
             </div>
             <h3 class="col-xs-12">¿Que Género prefieres?</h3>
             <div class="icons-gender">
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 accion">
                 <img src="../assets/icons/icons-03.png" alt="accion">
                 <p>Acción</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 animado">
                 <img src="../assets/icons/icons-01.png" alt="animado">
                 <p>Animado</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 aventura">
                 <img src="../assets/icons/icons-09.png" alt="aventura">
                 <p>Aventura</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 cienciaficcion">
                 <img src="../assets/icons/icons-06.png" alt="Ciencia ficción">
                 <p>C. Ficción</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 comedia">
                 <img src="../assets/icons/icons-11.png" alt="Comedia">
                 <p>Comedia</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 drama">
                 <img src="../assets/icons/icons-10.png" alt="Drama">
                 <p>Drama</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 erotico">
                 <img src="../assets/icons/icons-12.png" alt="Erotico">
                 <p>Erótico</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 fantasia">
                 <img src="../assets/icons/icons-02.png" alt="Fantasía">
                 <p>Fantasía</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 musical">
                 <img src="../assets/icons/icons-07.png" alt="Musical">
                 <p>Musical</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 romantica">
                 <img src="../assets/icons/icons-08.png" alt="Romantica">
                 <p>Romantica</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 suspenso">
                 <img src="../assets/icons/icons-05.png" alt="Suspenso">
                 <p>Suspenso</p>
               </div>
-              <div class="genders col-xs-3">
+              <div class="genders col-xs-3 terror">
                 <img src="../assets/icons/icons-04.png" alt="Terror">
                 <p>Terror</p>
               </div>
             </div>
           </div>
+
           <!-- boton para elegir -->
-        <div class="col-xs-8 col-xs-offset-2 btn-pelis">
-          <input type="submit" id="match" class="btn-1 btn btn-primary btn-lg" value="Quiero mi peli!">
-        </div>
+          <div class="col-xs-8 col-xs-offset-2 btn-pelis">
+            <input type="submit" id="match" class="btn-1 btn btn-primary btn-lg" value="Quiero mi peli!">
+          </div>
+
+          <!-- boton reset NUEVO-->
+          <div class="col-xs-8 col-xs-offset-2 btn-pelis">
+            <input type="submit" id="reset" class="btn-1 btn btn-primary btn-lg" value="Iniciar de Nuevo!">
+          </div>
+
+
         <!-- imagen default -->
         <div class="col-xs-12 ">
           <img id="imagen" class="img-random hide" src="../assets/images/gifpelis.gif" alt="perro">
