--- a/css/option-alone.css
+++ b/css/option-alone.css
@@ -5,7 +5,11 @@
   border-radius: 10px;
   border: 3px solid rgba(197,31,72,1);
 }
-
+.genders:hover {
+  background: rgba(134, 160, 231, 0.815) ;
+  color: #000;
+  border-radius: 5px;
+}
 @media (min-width: 992px){
   
 }
